# pilot_gym

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  generate_batch_oval_track.py  pyproject.toml  run_training.sh  visualize_track.py
agent/: __init__.py  kan_ppo_agent.py
components_registry/: __init__.py  components_registry.py
configurations/: bicycle_conf.yaml  kinematic_bicycle_conf.yaml  training_dynamic_kan_ppo_conf.yaml  training_kan_ppo_conf.yaml  training_kinematic_kan_ppo_conf.yaml
data/: track_list.yaml
dynamics_initializer/: __init__.py  bicycle_initializer.py
dynamics_model/: __init__.py  bicycle_model.py  dynamic_model.py  kinematic_bicycle_model.py
racing_env/: __init__.py  racing_env.py
reward_model/: __init__.py  base_reward_model.py  controlled_input_reward_model.py  simple_reward_model.py  smooth_input_reward_model.py  smooth_steer_reward_model.py
rl_agl/: ppo_continuous_action_kan.py
rl_alg/: ppo_continuous_action_kan.py
scripts/: agent_eval.py  agent_eval_kinematic.py  explain_kinematic.py  generate_batch_oval_track.py  straight_line_analysis.py  visualize_track.py
state_observer/: __init__.py  base_state_observer.py
tests/: test_oval_generator.py  test_racing_env.py
track/: __init__.py  track.py
track_controller/: __init__.py  base_track_controller.py  local_list_controller.py  local_oval_controller.py  track_data.py
track_generator/: __init__.py  oval_generator.py  track_generator.py
track_observer/: __init__.py  simple_track_observer.py
track_sampler/: __init__.py  base_track_sampler.py  round_robin_sampler.py
trainer/: kan_ppo.py
