[project]
name = "pilot-gym"
version = "0.1.0"
description = "A reinforcement learning gym environment for autonomous racing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
